--- a/clash/rule49.ini
+++ b/clash/rule49.ini
@@ -16,24 +16,15 @@ ruleset=DIRECT,https://proxy-rule.010811.xyz/rule/DIRECT.txt
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=鱼,[]FINAL
 
-custom_proxy_group=鱼`select`[]自动鱼`[]新加坡鱼`[]台湾鱼`[]日本鱼`[]美国鱼`[]香港鱼`[]特殊鱼`[]DIRECT`.*
+custom_proxy_group=鱼`select`.*
 
-custom_proxy_group=日本媒体`select`[]自动鱼`[]新加坡鱼`[]台湾鱼`[]日本鱼`[]美国鱼`[]香港鱼`[]特殊鱼`[]DIRECT`.*
-custom_proxy_group=台湾媒体`select`[]自动鱼`[]新加坡鱼`[]台湾鱼`[]日本鱼`[]美国鱼`[]香港鱼`[]特殊鱼`[]DIRECT`.*
-custom_proxy_group=AI媒体`select`[]自动鱼`[]新加坡鱼`[]台湾鱼`[]日本鱼`[]美国鱼`[]香港鱼`[]特殊鱼`[]DIRECT`.*
-custom_proxy_group=大流量应用`select`[]自动鱼`[]新加坡鱼`[]台湾鱼`[]日本鱼`[]美国鱼`[]香港鱼`[]特殊鱼`[]DIRECT`.*
-custom_proxy_group=变态媒体`select`[]自动鱼`[]新加坡鱼`[]台湾鱼`[]日本鱼`[]美国鱼`[]香港鱼`[]特殊鱼`[]DIRECT`.*
+custom_proxy_group=日本媒体`select`.*
+custom_proxy_group=台湾媒体`select`.*
+custom_proxy_group=AI媒体`select`.*
+custom_proxy_group=大流量应用`select`.*
+custom_proxy_group=变态媒体`select`.*
 
 custom_proxy_group=广告过滤`select`[]REJECT`[]DIRECT
-
-custom_proxy_group=自动鱼`url-test`.*`http://cp.cloudflare.com/generate_204`300
-
-custom_proxy_group=新加坡鱼`url-test`(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`300
-custom_proxy_group=台湾鱼`url-test`(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`300
-custom_proxy_group=日本鱼`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`300
-custom_proxy_group=美国鱼`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`300
-custom_proxy_group=香港鱼`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`300
-custom_proxy_group=特殊鱼`url-test`(实验)`http://cp.cloudflare.com/generate_204`300
 
 enable_rule_generator=true
 overwrite_original_rules=true
