--- a/clash/rule49.ini
+++ b/clash/rule49.ini
@@ -1,6 +1,6 @@
 [custom]
 
-ruleset=广告过滤,https://d49u.010811.xyz/ad.txt
+ruleset=REJECT,https://d49u.010811.xyz/ad.txt
 ruleset=DIRECT,https://proxy-rule.010811.xyz/rule/LAN.txt
 ruleset=变态媒体,https://proxy-rule.010811.xyz/rule/app/hentai.txt
 ruleset=日本媒体,https://proxy-rule.010811.xyz/rule/app/jp.txt
@@ -16,7 +16,7 @@ ruleset=DIRECT,https://proxy-rule.010811.xyz/rule/DIRECT.txt
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=鱼,[]FINAL
 
-custom_proxy_group=鱼`select`.*
+custom_proxy_group=鱼`select`[]自动鱼`.*
 
 custom_proxy_group=日本媒体`select`.*
 custom_proxy_group=台湾媒体`select`.*
@@ -24,7 +24,7 @@ custom_proxy_group=AI媒体`select`.*
 custom_proxy_group=大流量应用`select`.*
 custom_proxy_group=变态媒体`select`.*
 
-custom_proxy_group=广告过滤`select`[]REJECT`[]DIRECT
+custom_proxy_group=自动鱼`url-test`.*`http://cp.cloudflare.com/generate_204
 
 enable_rule_generator=true
 overwrite_original_rules=true
