--- a/clash/rule49.ini
+++ b/clash/rule49.ini
@@ -24,7 +24,7 @@ custom_proxy_group=AI媒体`select`.*
 custom_proxy_group=大流量应用`select`.*
 custom_proxy_group=变态媒体`select`.*
 
-custom_proxy_group=自动鱼`url-test`.*`http://cp.cloudflare.com/generate_204
+custom_proxy_group=自动鱼`url-test`.*`http://cp.cloudflare.com/generate_204`300
 
 enable_rule_generator=true
 overwrite_original_rules=true
