--- a/clash/rule49.ini
+++ b/clash/rule49.ini
@@ -16,15 +16,21 @@ ruleset=DIRECT,https://proxy-rule.010811.xyz/rule/DIRECT.txt
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=鱼,[]FINAL
 
-custom_proxy_group=鱼`select`[]自动鱼`.*
+custom_proxy_group=鱼`select`[]自动鱼`[]美国鱼`[]日本鱼`[]香港鱼`[]台湾鱼`[]狮城鱼`[]特殊鱼`.*
 
-custom_proxy_group=日本媒体`select`.*
-custom_proxy_group=台湾媒体`select`.*
-custom_proxy_group=AI媒体`select`.*
-custom_proxy_group=大流量应用`select`.*
-custom_proxy_group=变态媒体`select`.*
+custom_proxy_group=日本媒体`select`[]自动鱼`[]美国鱼`[]日本鱼`[]香港鱼`[]台湾鱼`[]狮城鱼`[]特殊鱼`.*
+custom_proxy_group=台湾媒体`select`[]自动鱼`[]美国鱼`[]日本鱼`[]香港鱼`[]台湾鱼`[]狮城鱼`[]特殊鱼`.*
+custom_proxy_group=AI媒体`select`[]自动鱼`[]美国鱼`[]日本鱼`[]香港鱼`[]台湾鱼`[]狮城鱼`[]特殊鱼`.*
+custom_proxy_group=大流量应用`select`[]自动鱼`[]美国鱼`[]日本鱼`[]香港鱼`[]台湾鱼`[]狮城鱼`[]特殊鱼`.*
+custom_proxy_group=变态媒体`select`[]自动鱼`[]美国鱼`[]日本鱼`[]香港鱼`[]台湾鱼`[]狮城鱼`[]特殊鱼`.*
 
 custom_proxy_group=自动鱼`url-test`.*`http://cp.cloudflare.com/generate_204`300
+custom_proxy_group=美国鱼`url-test`(美国|US)`http://cp.cloudflare.com/generate_204`300
+custom_proxy_group=日本鱼`url-test`(日本|JP)`http://cp.cloudflare.com/generate_204`300
+custom_proxy_group=香港鱼`url-test`(香港|HK)`http://cp.cloudflare.com/generate_204`300
+custom_proxy_group=台湾鱼`url-test`(台湾|TW)`http://cp.cloudflare.com/generate_204`300
+custom_proxy_group=狮城鱼`url-test`(新加坡|狮城|SG)`http://cp.cloudflare.com/generate_204`300
+custom_proxy_group=特殊鱼`url-test`(实验)`http://cp.cloudflare.com/generate_204`300
 
 enable_rule_generator=true
 overwrite_original_rules=true
